syntax = "proto3";

import 'common.proto';
option java_multiple_files = true;
option java_package = "via.sdj3.sep_t3.protobuf";

service ratingService
{
  rpc getAllRatings(Empty) returns (stream RatingReadGrpcDto);
  rpc createRating(RatingCreationGrpcDto) returns(RatingReadGrpcDto);
  rpc getRatingById(GenericMessage)returns(RatingReadGrpcDto);
  //generic message is the userId
  rpc getAllRatingsMadeToUser(GenericMessage)returns(stream RatingReadGrpcDto);
  //we send the ratingId and get a confirmation back
  rpc deleteRating(GenericMessage)returns(GenericMessage);
}

message RatingCreationGrpcDto
{
  string userFromId=1;
  string userToId=2;
  int32 ratingValue=3;
}

message RatingReadGrpcDto
{
  int32 ratingId=1;
  string userFromId=2;
  string userToId=3;
  int32 ratingValue=4;
}